--- a/appTest/Dockerfile
+++ b/appTest/Dockerfile
@@ -2,13 +2,43 @@ FROM node:14 as build
 
 WORKDIR /app
 COPY . .
-RUN npm install nvm 
+RUN apt install wget git 
+
+#RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
+# RUN git clone http://github.com/creationix/nvm.git /root/.nvm;
+# RUN chmod -R 777 /root/.nvm/;
+# #RUN sh /root/.nvm/install.sh;
+# RUN bash /root/.nvm/install.sh;
+# RUN bash -i -c 'nvm ls-remote';
+# RUN export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")" [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm
+# replace shell with bash so we can source files
+RUN rm /bin/sh && ln -s /bin/bash /bin/sh
+RUN apt-get update \
+    && apt-get install -y wget \
+    && apt-get -y autoclean
+
+RUN mkdir /usr/local/nvm
+
+ENV NVM_DIR /usr/local/nvm
+ENV NODE_VERSION 10.19.0
+#RUN curl --silent -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.2/install.sh | bash
+RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
+
+# install node and npm
+RUN source $NVM_DIR/nvm.sh \
+    && nvm install $NODE_VERSION \
+    && nvm alias default $NODE_VERSION \
+    && nvm use default
+
+ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
+ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
+RUN node -v
 RUN npm install  npm@6.14.4
+RUN npm -v
 RUN npm install  @ionic/cli@6.12.3
-RUN nvm install v10.19.0
 RUN npm install
 COPY ./ /app/
-RUN npm run-script build:prod
+RUN ionic cordova build android
 
 
 FROM nginx:alpine
